--- a/src/main/webapp/web_admin/index.html
+++ b/src/main/webapp/web_admin/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>客流宝数据管理系统</title>
+<title>法律知识库管理平台与分析平台</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
