--- a/src/main/webapp/web_admin/index.html
+++ b/src/main/webapp/web_admin/index.html
@@ -244,7 +244,7 @@ $(function(){
 	style="width: 100%; height: 100%; padding-left: 1px; padding-right: 1px;">
 	<div data-options="region:'north',border:false" style=" text-align: center; height: 80px; background: url('/images/web_banner.jpg') no-repeat center top #73B9D3;background-size: 100% 100%; padding: 0px; overflow: hidden;">
 		<span style=" font-size: 26px; font-weight: bold; color:#FFFFFF; -webkit-text-stroke: 0.1px #67C7D7;">
-		   <p style="margin-top: 20px;">客流宝数据管理系统</p>
+		   <p style="margin-top: 20px;">法律知识库管理平台与分析平台</p>
 			<span style=" height:25px; float: right; margin-top: -20px; margin-right: 10px; font-size: 20px;">
 				<span class="glyphicon glyphicon-user" style="font-weight: bold; margin-left: 10px;"></span>
 				<span>${(AdminLoginName)!}</span> <span style="width: 10px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
