--- a/src/main/webapp/web_admin/lawCase.html
+++ b/src/main/webapp/web_admin/lawCase.html
@@ -26,7 +26,7 @@
 
         function getRecordCountCallback(json)
         {
-            if(json.RecordCount==0) alert("设备数量等于0");
+            if(json.RecordCount==0) alert("案件数量等于0");
             $("#pagination").pagination(json.RecordCount,    //分布总数量，必须参数
                 {
                     callback: PageCallback,  //PageCallback() 为翻页调用次函数。
