--- a/src/main/webapp/web_admin/analyse.html
+++ b/src/main/webapp/web_admin/analyse.html
@@ -103,20 +103,14 @@
         function  displayRecordList(json){
             var recList='';
             for(var i=0;i<json.recs.length;i++){
-
-
-
+                    console.log(json.recs[i]);
 
                 recList+=' <tr>'+
                     '<td>'+(pageIndex*itemsPerPage+i+1)+'</td>'+
                     // '<td>'+json.recs[i].DeviceID+"("+long2MacAddress(json.recs[i].DeviceID)+')</td>'+
-                    '<td>'+json.recs[i].LawID+'</td>'+
-                    '<td>'+json.recs[i].LawName+'</td>'+
-                    '<td>'+json.recs[i].PublishDate+'</td>'+
-                    '<td>'+json.recs[i].EffectiveDate+'</td>'+
-                    '<td>'+json.recs[i].IssueUnit+'</td>'+
-                    '<td>'+json.recs[i].EffectiveLevel+'</td>'+
-                    '<td>'+json.recs[i].Type+'</td>+</tr>';
+                    '<td>'+json.recs[i].CaseKind+'</td>'+
+                    '<td>'+json.recs[i].num+'</td>+</tr>';
+
             }
             $("#recordList").html(recList);
             // $("#recordList").append(recList);
@@ -202,7 +196,7 @@
 <div class="main_info">
     <div class="list_title">
         <div class="title_caption">
-            <i class="glyphicon glyphicon-align-justify"></i>法律列表
+            <i class="glyphicon glyphicon-align-justify"></i>案件分析列表
         </div>
     </div>
     <div class="list_toolbar">
@@ -211,7 +205,7 @@
                 <label style=" font-size: 14px; font-weight: 400;float:left; margin-top: 8px;margin-right: 6px;">查询条件</label>
                 <input type="text" class="form-control"
                        style="height: 35px; font-size: 14px; width:200px; font-weight: 500px; margin-left: 0px;"
-                       id="keyWord" placeholder="法律ID关键词"> <span class="input-group-addon input_button"
+                       id="keyWord" placeholder="案件类型关键词"> <span class="input-group-addon input_button"
                                                                  style="height: 35px; width: 35px;" onclick="search()">
                         <img src="../images/find.png" onmouseover="this.src='../images/find3.png'"onmouseout="this.src='../images/find.png'">
 						</span>
@@ -219,7 +213,7 @@
         </div>
         <div class="toolbar_button">
             <button type="button" class="btn btn-default" onclick="window.location.reload()">刷新列表</button>
-            <button type="button" class="btn btn-default" onclick="addRecord()">添加法律</button>
+            <button type="button" class="btn btn-default" onclick="addRecord()">添加案件类型</button>
         </div>
 
     </div>
