--- a/src/main/webapp/web_admin/analyse.html
+++ b/src/main/webapp/web_admin/analyse.html
@@ -136,7 +136,7 @@
                 shade: 0,
                 moveType: 0,
                 shift: 0,
-                content:'/device/web_add'
+                content:'/analyse/web_add'
             });
         }
         function editRecord(id){
