--- a/src/main/webapp/web_admin/lawList.html
+++ b/src/main/webapp/web_admin/lawList.html
@@ -142,7 +142,7 @@
                 shade: 0,
                 moveType: 0,
                 shift: 0,
-                content:'/lawcase/web_add'
+                content:'/lawlist/web_add'
             });
         }
         function editRecord(id){
