--- a/src/main/webapp/web_admin/lawCase.html
+++ b/src/main/webapp/web_admin/lawCase.html
@@ -137,7 +137,7 @@
                 shade: 0,
                 moveType: 0,
                 shift: 0,
-                content:'/device/web_add'
+                content:'/lawcase/web_add'
             });
         }
         function editRecord(id){
