--- a/src/main/webapp/web_admin/lawCase.html
+++ b/src/main/webapp/web_admin/lawCase.html
@@ -132,12 +132,12 @@
                 type: 2,
                 skin: 'layui-layer-rim',
                 shadeClose:true ,
-                area: ['400px', '300px'],
-                title: ['添加管理员信息','background:#0090D7;color:#FFFFFF;'],
+                area: ['500px', '400px'],
+                title: ['添加案件信息','background:#0090D7;color:#FFFFFF;'],
                 shade: 0,
                 moveType: 0,
                 shift: 0,
-                content:'/device/web_add'
+                content:'/lawcase/web_add'
             });
         }
         function editRecord(id){
